--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           <li>lavender</li>
           <li>plums</li>
         </ul>
+        <input type="text" class="description">
+        <button class="description">Change list description</button>
   </div>
     <script src="app.js"></script>
   </body>
