creating new DOM elements part 1

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <li>lavender</li>
           <li>plums</li>
         </ul>
-        <input type="text" class="description">
-        <button class="description">Change list description</button>
+        <input type="text" class="addIthemInput">
+        <button class="addItemButton">Add item</button>
   </div>
     <script src="app.js"></script>
   </body>
